--- a/style.css
+++ b/style.css
@@ -157,24 +157,24 @@ main section:nth-of-type(2) {
     padding: 0.5em;
 }
 
-#personalized{
+section li:nth-of-type(1){
     background-color: var(--teal);
 
 }
 
-#proven{
+section li:nth-of-type(2){
     background-color: var(--lavender);
 }
 
-#supportive{
+section li:nth-of-type(3){
     background-color: var(--yellow);
 }
 
-#flexible{
+section li:nth-of-type(4){
     background-color: var(--white);
 }
 
-.reasons{
+section ul{
     display: flex;
     flex-wrap: wrap;
     gap: 1em;
@@ -183,7 +183,7 @@ main section:nth-of-type(2) {
 
 }
 
-.reasons li{
+section li{
     width: 11em;
     height: 4em;
     font-weight: bold;
@@ -211,12 +211,12 @@ td{
     padding: 1em;
 }
 
-#first_step{
+main section:last-of-type{
     background-color: #D9526F;
     padding: 0.5em;
 }
 
-#first_step p{
+section:last-of-type p{
     color: var(--white);
     margin: 1em;
 }
